...
    <!--Login-->
    <string name="login_app_name">Utrecht \nCompanion to the Earth</string>
    <string name="login_text">Please sign in to the app by using your username and password.</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_app_logo_description">App logo</string>
    <string name="login_nocredentials_message">Please enter a username and password</string>
    <string name="login_nousername_message">Please enter a username</string>
    <string name="login_nopassword_message">Please enter a password</string>
    <string name="login_wrongcredentials_message">Incorrect username or password</string>
    <string name="login_signin_button_text">Sign In</string>
    <string name="login_successfullogin">Login successful</string>
    <string name="login_serverdown">Server connection is currently unavailable, try again later</string>
    <string name="login_use_offline">Use Offline</string>
    <string name="login_offline">Starting offline</string>

...
