<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/login_app_logo_description"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/ic_sprite_uce_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login_app_name"
            android:textColor="?textColorDarkRef"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/TextGrey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Spinner
        android:id="@+id/orgselector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_border_edgy"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orgselector">

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="username"
            android:background="?colorPrimaryDarkRef"
            android:drawableStart="@drawable/ic_sprite_idcard"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="textPersonName"
            android:textColorHint="@color/TwinkleBlue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/TwinkleBlue" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="password"
            android:background="?colorPrimaryDarkRef"
            android:drawableStart="@drawable/ic_sprite_lock"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/TwinkleBlue" />
    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_border_button"
        android:text="@string/login_signin_button_text"
        android:textAllCaps="false"
        android:textColor="@color/TextDarkGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>