...
    android:id="@+id/geoMapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoMap">

    <com.uu_uce.views.CustomMap
        android:id="@+id/customMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/customMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="6dp"
        android:elevation="6dp">

        <com.uu_uce.views.DragButton
            android:id="@+id/dragBar"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/Flirtatious"
            android:clickable="true"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/settings_image"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/logout_image"
...
